--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
-.App {
-  text-align: center;
+:root {
+
+}
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+*, *::before, *::after { 
+    margin: 0; 
+    padding: 0; 
+    box-sizing: inherit;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+    font-family: 'Raleway', sans-serif;
+    background-image: url("../public/images/bgweb.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1 {
+    font-size: clamp(3.8rem, 4vw, 4.2rem);
+    text-align: center;
+    margin-bottom: 20px;
+    color: rgb(138, 181, 95);
+    -webkit-text-stroke-width: 3px;
+    -webkit-text-stroke-color: rgba(128, 38, 180, 0.654);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+li {
+    font-size: clamp(1.2rem, 4vw, 1.6rem);
 }
 
-.App-link {
-  color: #61dafb;
+
+li.ant-list-item.done {
+    background-color: rgba(96, 93, 93, 0.509);
+    text-decoration: line-through;
+    
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+main {
+    width: 89%;
+    max-width: 750px;
+    margin: 0 auto;
+    margin-top: 20%;
+    margin-bottom: auto;
+    background-color: rgba(102, 101, 101, 0.53);
+    padding: 15px;
+    border-radius: 13px;
+    border: 5px solid rgb(254, 252, 252);
+    filter: drop-shadow(0px 0px 30px black);
+}
+
+button.ant-btn {
+    background-color: rgb(128, 38, 180, 0.654);
+}
+
+span.ant-input-affix-wrapper, input.ant-input {
+    background-color: rgb(138, 181, 95);
 }
